# khi_ux150_

./: README
khi_ux150/: CMakeLists.txt  khi_ux150_controller.xml  package.xml
khi_ux150/controller/: khi_ux150_controller.cpp
khi_ux150/doc/: userdoc.rst
khi_ux150/hardware/: khi_ux150_hardware.cpp
khi_ux150/reference_generator/: send_trajectory.cpp
khi_ux150/test/: test_khi_ux150_controller_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
khi_ux150_description/: CMakeLists.txt  package.xml
khi_ux150_description/config/: display.rviz
khi_ux150_description/launch/: display.launch.py  rviz.launch.py  state_publisher.launch.py
khi_ux150_description/meshes/: arm_support.stl  neck.stl  parallel_2.stl
khi_ux150_description/moveit/: package.xml
khi_ux150_description/urdf/: khi_ux150.gazebo  khi_ux150.trans  khi_ux150.urdf.xacro  khi_ux150_macro.urdf.xacro  khi_ux150_macro.xacro  materials.xacro
khi_ux150_hardware/: CMakeLists.txt  khi_ux150_hardware.xml  package.xml
khi_ux150_hardware/include/khi_ux150_hardware/: khi_ux150_hardware.hpp
khi_ux150_hardware/src/: khi_ux150_hardware.cpp
khi_ux150_moveit_config/: CMakeLists.txt  package.xml
khi_ux150_moveit_config/config/: joint_limits.yaml  khi_ux150.ros2_control.xacro  khi_ux150.srdf  kinematics.yaml  move_group.launch.py  moveit_controllers.yaml  moveit_rviz.launch.py  ros2_controllers.yaml  rsp.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py
khi_ux150_moveit_config/launch/: demo.launch.py  setup_assistant.launch.py  static_virtual_joint_tfs.launch.py
(+33 files in other folders)
