<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>khi_ux150_hardware</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dan@todo.todo">dan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_add_gmock</test_depend>
  <test_depend>hardware_interface</test_depend>

  
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>hardware_interface</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
